kubernetes/karakeep/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
