kubernetes/karakeep/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: nginx-internal
  rules:
  - host: "karakeep.internal.yuha0.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: "web"
            port:
              number: 3000
